# SHACKLE-PRO-

./: .gitignore  CLIENT-CHECKLIST.md  LEGAL-DOCS-README.md  NDA.md  README.md  SERVICE-AGREEMENT.md  demo.py  index-updated.html  index.html  pyproject.toml  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
legal/: DELIVERY-PROCESS.md  NDA.md
shackle/: __init__.py  core.py
tests/: test_core.py
v2/: README.md
v2/benchmarks/: perf.py
v2/clients/rust/: Cargo.toml
v2/clients/rust/src/: lib.rs
v2/clients/typescript/: package.json  shackle-client.ts
v2/compliance/: AI-Agent-Liability-Shield.md  DELIVERABLES.md  Dockerfile  README.md  alerts.yml  audit_export.py  docker-compose.yml  enterprise_onboarding.md  generate_pdf.py  license_keygen.py  license_server.py  prometheus.yml  requirements.txt  shackle-license-server.service  test_deployment.sh
v2/daemon/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  DELIVERY.md  DEPLOYMENT.md  Dockerfile  MANIFEST.txt  Makefile  README.md  audit.py  cli.py  client.py  daemon.py  docker-compose.yml  example_usage.py  quickstart.sh  requirements.txt  state.py  test_daemon.py  verify.sh
v2/deployment/: daemon.yaml  docker-compose.yml  init.sql  shackle-daemon.service
v2/docs/: ARCHITECTURE.md  SOC2-MAPPING.md
v2/landing/: index.html
v2/protocol/: Makefile  PROTOCOL.md  README.md  client_stub.py  protocol-examples.md  requirements.txt  server_stub.py  shackle.proto  shackle_service.proto  test_protocol.py
v2/protocol/python-reference/: client.py
v2/spec/: README.md  SPEC.md  decide.py
v2/tests/: test_decide_properties.py
