[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shackle-guard"
version = "0.1.0"
description = "A lightweight, framework-agnostic runtime circuit breaker for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Dante Bullock", email = "docspoc101@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Fame510/SHACKLE-PRO-"
Repository = "https://github.com/Fame510/SHACKLE-PRO-"
"Bug Reports" = "https://github.com/Fame510/SHACKLE-PRO-/issues"
"Commercial Licensing" = "mailto:docspoc101@gmail.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["shackle*"]
